samples/_failures_safe/1761545999_fc099b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94773f26.c: In function ‘main’:
./samples/SAFE/__tmp_94773f26.c:138:9: error: expected expression at end of input
  138 |         } else
      |         ^
./samples/SAFE/__tmp_94773f26.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94773f26.c:138:9: error: expected declaration or statement at end of input
